RESOLVED FIXED 254175
[WebGPU] mip level validation is not handled correctly in copyBuffer/TextureToBuffer/Texture
https://bugs.webkit.org/show_bug.cgi?id=254175
Summary [WebGPU] mip level validation is not handled correctly in copyBuffer/TextureT...
Mike Wyrzykowski
Reported 2023-03-20 12:52:23 PDT
[WebGPU] mip level validation is not handled correctly in copyBuffer/TextureToBuffer/Texture
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-20 12:52:40 PDT
Mike Wyrzykowski
Comment 2 2023-03-20 13:12:36 PDT
Mike Wyrzykowski
Comment 3 2023-10-20 14:56:08 PDT
EWS
Comment 4 2023-10-23 14:26:40 PDT
Committed 269667@main (53f8f07b2508): <https://commits.webkit.org/269667@main> Reviewed commits have been landed. Closing PR #19371 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.