[WebGPU] mip level validation is not handled correctly in copyBuffer/TextureToBuffer/Texture https://bugs.webkit.org/show_bug.cgi?id=254175 <radar://106958194>

Reviewed by NOBODY (OOPS!).

The correct sizes were already computed in logicalMiplevelSpecificTextureExtent
but they were not used for validation.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::copyBufferToTexture):
(WebGPU::CommandEncoder::copyTextureToBuffer):
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::writeTexture):
3D textures with rowBytes > 2048 will assert in Metal in debug
and release.

* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::validateLinearTextureData):
Metal requires the copy size to be a multiple of the block size.